Fix vh on mobile

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -26,7 +26,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    min-height: 100vh;
+    min-height: 100dvh;
     margin: 0;
     background-color: $bg-color-1;
     &.gradient {
@@ -338,7 +338,7 @@ main>section {
     left: 0;
     position: fixed;
     width: 100vw;
-    height: 100vh;
+    height: 100dvh;
     z-index: 50;
 }
 .burger-menu {
@@ -386,7 +386,7 @@ main>section {
 }
 .menu-conteiner {
     width: 100vw;
-    height: 100vh;
+    height: 100dvh;
     position: fixed;
     z-index: 2;
     transition: transform .2s ease;
@@ -454,7 +454,7 @@ main>section {
 main {
     padding: 115PX 0 0 0;
     color: $bg-color-1;
-    min-height: 100vh;
+    min-height: 100dvh;
     box-sizing: border-box;
 }
 .footer {
@@ -572,7 +572,7 @@ main {
 .fixed-buttons {
     position: fixed;
     left: 30px;
-    transform: translateY(calc(100vh - 150px));
+    transform: translateY(calc(100dvh - 150px));
     height: 150px;
     width: calc(100% - 60px);
     z-index: 1;
@@ -1142,7 +1142,7 @@ section {
         left: calc(50% - 260px);
         max-width: 500px;
         width: 100%;
-        height: 100vh;
+        height: 100dvh;
         max-height: 700px;
         margin: 30px 20px;
         padding: 20px;
@@ -1180,7 +1180,7 @@ section {
 @media (max-height: 900px) {
     .news-article.fullscreen {
         top: 0;
-        height: calc(100vh - 60px);
+        height: calc(100dvh - 60px);
     }
 }
 @media (max-width: 580px) {
@@ -1297,7 +1297,7 @@ section {
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100vh;
+    height: 100dvh;
     backdrop-filter: blur(15px);
     background: #00000049;
     pointer-events: none;
@@ -1623,13 +1623,13 @@ section {
     flex-direction: column;
     gap: 15px;
     height: fit-content;
-    max-height: calc(100vh - 200px);
+    max-height: calc(100dvh - 200px);
     top: 90px;
     h3 {
         font-size: 22px;
     }
     &.scrolled {
-        max-height: calc(100vh - 120px);
+        max-height: calc(100dvh - 120px);
     }
 }
 .article-content_links {
@@ -1783,7 +1783,7 @@ section {
         top: 0;
         width: 100%;
         max-height: 400px !important;
-        transform: translateY(100vh);
+        transform: translateY(100dvh);
         padding: 12px;
         border-radius: 15px 15px 0 0;
         background: #ffffff;
@@ -1803,7 +1803,7 @@ section {
 }
 @media (max-width: 768px) and (max-height: 550px) {
     .article-content {
-        max-height: calc(100vh - 150px) !important;
+        max-height: calc(100dvh - 150px) !important;
     }
 }
 @media (max-width: 630px) {
